# sqlgrep

./: .gitignore  .travis.yml  CMakeLists.txt  LinuxBuild.sh  README.md  WindowsBuild.cmd  sqlgrep.sln
ChocolateyPackage/: BuildPackage.ps1
ChocolateyPackage/sqlgrep/: sqlgrep.nuspec
ChocolateyPackage/sqlgrep/tools/: VERIFICATION.txt
sqlgrep/: .gitignore  linux_specific.cpp  pch.h  sqlgrep.cpp  sqlgrep.h  sqlgrep.vcxproj  sqlgrep.vcxproj.filters  windows_specific.cpp
